osd/PeeringState.h: ignore MLogRec in Peering/GetInfo

It is possible to receive a response for an old GetLog request, after
we've transitioned out of Started/Primary/Peering/GetLog due to a map change.
In such cases, just ignore it rather than crashing. We'll transition to GetLog
again at later point, when required.

Fixes: https://tracker.ceph.com/issues/44022
Signed-off-by: Neha Ojha <nojha@redhat.com>